--- a/MainMatter/Background.tex
+++ b/MainMatter/Background.tex
@@ -726,9 +726,9 @@ Posteriormente, se entrenó un meta-regresor similar \cite{reif2012automatic} pa
 %	\item \textit{Informing the Use of Hyperparameter Optimization Through Metalearning}
 %\end{itemize}
 
-Uno de los defectos de los métodos realizados para AutoML es que los investigadores y expertos dependen exclusivamente en los métodos automatizados para encontrar configuraciones para optimizar el rendimiento de los algoritmos [poner link de Hyperparameter Importance Across Datasets]. Esto hace que ellos no obtengan ninguna intuición o información más allá de la configuración simple elegida. Con el objetivo de proveer tal intuición en la era de la automatización, se aboga por el desarrollo de los métodos automatizados que proveen observaciones de alto nivel en los hiperparámetros de un algoritmo. Un enfoque para abordar este problema es el desarrollo de meta-modelos para predecir si vale la pena ajustar o no los hiperparámetros de un algoritmo.
+Uno de los defectos de los métodos realizados para AutoML es que los investigadores y expertos dependen exclusivamente en los métodos automatizados para encontrar configuraciones para optimizar el rendimiento de los algoritmos \cite{rijn2018hyp}. Esto hace que ellos no obtengan ninguna intuición o información más allá de la configuración simple elegida. Con el objetivo de proveer tal intuición en la era de la automatización, se aboga por el desarrollo de los métodos automatizados que proveen observaciones de alto nivel en los hiperparámetros de un algoritmo. Un enfoque para abordar este problema es el desarrollo de meta-modelos para predecir si vale la pena ajustar o no los hiperparámetros de un algoritmo.
 
-Los meta-modelos se usan para determinar si es necesario ajustar los hiperparámetros de un algoritmo con el objetivo de reducir el número de configuraciones de parámetros que necesitan ser optimizados, y para salvar tiempo valioso de optimización en las configuraciones con restricciones de tiempo. Dados los meta-features de una tarea en cuestión, estos meta-modelos predicen si vale la pena ajustar los hiperparámetros de una configuración existente [2 primeros links]. Este tipo de trabajo intentan constestar las preguntas: 
+Los meta-modelos se usan para determinar si es necesario ajustar los hiperparámetros de un algoritmo con el objetivo de reducir el número de configuraciones de parámetros que necesitan ser optimizados, y para salvar tiempo valioso de optimización en las configuraciones con restricciones de tiempo. Dados los meta-features de una tarea en cuestión, estos meta-modelos predicen si vale la pena ajustar los hiperparámetros de una configuración existente \cite{ridd2014using, rijn2018hyp}. Este tipo de trabajo intentan constestar las preguntas: 
 \begin{enumerate}
 	\item \textquestiondown Cuáles de los hiperparámetros de los algoritmos importan más para el rendimiento empírico?
 	\item \textquestiondown Qué valores de estos hiperparámetros pueden producir un buen rendimiento?
@@ -736,7 +736,7 @@ Los meta-modelos se usan para determinar si es necesario ajustar los hiperparám
 
 Después de un análisis de 100 datasets, en uno de estos trabajos [poner link del primero] se demuestra que generalmente los mismos hiperparámetros son importantes para la mayoría de los datasets. Este experimento se llevó a cabo con 3 clasificadores: SVMs, Adaboost y \textit{random forests} aplicando ANOVA.
 
-Además, existen otros trabajos que no solo predicen si es necesario el ajuste de los hiperparámetros, sino cuánta mejora puede ser esperada en el ejuste de un algoritmo específico basada en la mejora del rendimiento y el costo computacional estimados [úlitmo link]. Para realizar este experimento, realizaron una experimentación comparando para cada combinación de algoritmos y datasets el rendimiento alcanzado usando una versión del algoritmo optimizado y otro con los hiperparámetros por defecto de \texttt{scikit-learn}. Como método de optimización de hiperparámetros para obtener los algoritmos optimizados usaron algoritmos genéticos. Además experimentan construyendo un meta-modelo para predecir cuanta mejora es esperada. Usan un \textit{Muti-Layer Perceptron} (MLP) como el meta-modelo y un conjunto de 68 meta-features; usan PCA para preprocesar las meta-features. Para predecir el presupuesto de tiempo aplican metalearning de nuevo, esta vez con un modelo de regresión lineal, para predecir el tiempo de ejecución medio de cada algoritmo de aprendizaje.
+Además, existen otros trabajos que no solo predicen si es necesario el ajuste de los hiperparámetros, sino cuánta mejora puede ser esperada en el ejuste de un algoritmo específico basada en la mejora del rendimiento y el costo computacional estimados \cite{sanders2017informing}. Para realizar este experimento, realizaron una experimentación comparando para cada combinación de algoritmos y datasets el rendimiento alcanzado usando una versión del algoritmo optimizado y otro con los hiperparámetros por defecto de \texttt{scikit-learn}. Como método de optimización de hiperparámetros para obtener los algoritmos optimizados usaron algoritmos genéticos. Además experimentan construyendo un meta-modelo para predecir cuanta mejora es esperada. Usan un \textit{Muti-Layer Perceptron} (MLP) como el meta-modelo y un conjunto de 68 meta-features; usan PCA para preprocesar las meta-features. Para predecir el presupuesto de tiempo aplican metalearning de nuevo, esta vez con un modelo de regresión lineal, para predecir el tiempo de ejecución medio de cada algoritmo de aprendizaje.
 
 
 %\subsubsection{Otras técnicas}
@@ -791,9 +791,9 @@ Estas técnicas son usadas generalmente para recomendar configuraciones y espaci
 
 Supongamos que $P_{new} = 0$, por lo que no tenemos acceso a ninguna evaluación de $t_{new}$. Aún así se puede aprender una función $f: \Theta \times T \rightarrow \{\theta^*_k\}, k=1..K$, resultando en un conjunto de evaluaciones recomendadas \textit{independientes} de $t_{new}$. Estos $\theta^*_k$ pueden ser evaluados en $t_{new}$ para seleccionar el mejor, o para inicializar otros enfoques de optimización.
 
-Uno de los enfoques para la solución de este problema es mediante el uso de \textit{Active Testing}[poner el link de selecting classification algorithms with active testing...]. \textit{Active Testing} selecciona algoritmos iterativamente para ser probados en un nuevo dataset, aprendiendo de cada nueva evaluación para seleccionar inteligentemente el siguiente mejor candidato. Tiene como objetivo estimar la probabilidad relativa de que un algoritmo particular superará al mejor candidato actual. En uno de estos trabajos [Speeding up algorithm selection using average ranking and active testing by introducing runtime] se extiende el uso de \textit{active testing}, introduciendo una nueva medida multi-objetivo que le da preferencia no solo a algoritmos prometedores, sino a aquellos que sean fáciles de evaluar, A3R. Esta medida tiene como objetivo arreglar algunas deficiencias de \textit{Adjusted Ratio of Ratios} (ARR) [Measures for combining accuracy and time for meta-learning]. Además \textit{Active Testing} es combinado usando otra técniva de selección de algoritmos: \textit{Average Ranking}. \textit{Average Ranking} combina el ranking de algoritmos observados en datasets anteriores para identificar los mejores algoritmos para un nuevo dataset.
+Uno de los enfoques para la solución de este problema es mediante el uso de \textit{Active Testing}\cite{leite2017selecting}. \textit{Active Testing} selecciona algoritmos iterativamente para ser probados en un nuevo dataset, aprendiendo de cada nueva evaluación para seleccionar inteligentemente el siguiente mejor candidato. Tiene como objetivo estimar la probabilidad relativa de que un algoritmo particular superará al mejor candidato actual. En uno de estos trabajos \cite{abdulrahman2018speeding} se extiende el uso de \textit{active testing}, introduciendo una nueva medida multi-objetivo que le da preferencia no solo a algoritmos prometedores, sino a aquellos que sean fáciles de evaluar, A3R. Esta medida tiene como objetivo arreglar algunas deficiencias de \textit{Adjusted Ratio of Ratios} (ARR) \cite{abdulrahman2014measures}. Además \textit{Active Testing} es combinado usando otra técniva de selección de algoritmos: \textit{Average Ranking}. \textit{Average Ranking} combina el ranking de algoritmos observados en datasets anteriores para identificar los mejores algoritmos para un nuevo dataset.
 
-Una de las ventajas que tiene esta técnica es que no necesita del uso de meta-features, que pueden resultar caras de calcular y difíciles de elegir, lo que lo hace ideal para inicializar procesos costosos de optimización. En uno de estos trabajos usan este enfoque para transferir conocimiento mediante una estrategia de inicialización para la optimización de hiperparámetros [Learning hyperparameter optimization initializations]. Las configuraciones inciales de hiperparámetros son obtenidas optimizando por una función de \textit{meta-pérdida} mediante técnicas de optimización basadas en gradientes.
+Una de las ventajas que tiene esta técnica es que no necesita del uso de meta-features, que pueden resultar caras de calcular y difíciles de elegir, lo que lo hace ideal para inicializar procesos costosos de optimización. En uno de estos trabajos usan este enfoque para transferir conocimiento mediante una estrategia de inicialización para la optimización de hiperparámetros \cite{witsuba2015learning}. Las configuraciones inciales de hiperparámetros son obtenidas optimizando por una función de \textit{meta-pérdida} mediante técnicas de optimización basadas en gradientes.
 
 
 %Tales enfoques a menudo producen un ranking, es decir, un conjunto ordenado $\theta^*_k$. Esto es típicamente hecho discreteando $\theta$ en un conjunto de configuraciones candidatas $\theta_i$, también llamada \textit{portafolio}, evaluado en un gran número de tareas $t_j$. Luego podemos construir un ranking por clase, por ejemplo usando \textit{success rates}, \textit{AUC}, o \textit{significant wins}. % Sin embargo, a menudo es deseable que algortimos igualmente buenos pero más rápidos estén rankeados mejor, y múltiples métodos han sido propuestos para compensar tiempo de entrenamiento y precisión. Luego podemos agregar estos rankings de una sola tarea en rankings globales, por ejemplo calculando el rank promedio a través de todas las tareas. Cuando hay insuficientes datos para construir un ranking global, uno puede recomendar un subconjunto de configuraciones basados en la configuración mejor conocida para cada tarea anterior, o retornar quasi-lineal rankings.
@@ -816,9 +816,9 @@ Una de las ventajas que tiene esta técnica es que no necesita del uso de meta-f
 
 Las evaluaciones previas también pueden ser usadas para aprender mejores \textit{espacios de configuración} $\Theta^*$. Incluso siendo independientes de $t_{new}$, esto puede radicalmente acelerar la búsqueda para modelos óptimos, ya que solo las regiones más relevantes de los espacios de configuración son explorados. Esto es crítico cuando los recursos computacionales están limitados. 
 
-Uno de los enfoques es usando ANOVA funcional, para seleccionar y optimizar solo los hiperparámetros que son considerados importantes [poner referencia Hyperparameter Importance Across Datasets]. En este trabajo usan un \textit{framework} de ANOVA funcional para analizar la importancia de los hiperparámetros, basado en un modelo de regresión que da predicciones para el rendimiento de configuraciones arbitrarias de hierperparámetros.
+Uno de los enfoques es usando ANOVA funcional, para seleccionar y optimizar solo los hiperparámetros que son considerados importantes \cite{rijn2018hyp}. En este trabajo usan un \textit{framework} de ANOVA funcional para analizar la importancia de los hiperparámetros, basado en un modelo de regresión que da predicciones para el rendimiento de configuraciones arbitrarias de hierperparámetros.
 
-Otra propuesta consiste en descartar las regiones del espacio de búsqueda que no son probables de contener mejores configuraciones de hiperparámetros transfiriendo conocimiento de experimentos pasados en otros datasets, así como tomando en cuenta las evaluaciones que ya están hechas en el dataset actual [Hyperparameter Search Space Pruning - A New Component for Sequential Model-Based Hyperparameter Optimization]. El objetivo de esa investigación es añadir un nuevo componente a SMBO, una manera de podar la búsqueda de hiperparámetros, la cual es una manera común de acelerar la búsqueda en muchos dominios, pero no ha sido aplicado aún a la optimización de hiperparámetros. La idea principal de su enfoque es que datasets similares a los nuevos datasets tienen regiones similares, o incluso iguales, que no son interesantes y por lo tanto no valen la pena investigar.
+Otra propuesta consiste en descartar las regiones del espacio de búsqueda que no son probables de contener mejores configuraciones de hiperparámetros transfiriendo conocimiento de experimentos pasados en otros datasets, así como tomando en cuenta las evaluaciones que ya están hechas en el dataset actual \cite{witsuba2015hyper}. El objetivo de esa investigación es añadir un nuevo componente a SMBO, una manera de podar la búsqueda de hiperparámetros, la cual es una manera común de acelerar la búsqueda en muchos dominios, pero no ha sido aplicado aún a la optimización de hiperparámetros. La idea principal de su enfoque es que datasets similares a los nuevos datasets tienen regiones similares, o incluso iguales, que no son interesantes y por lo tanto no valen la pena investigar.
 
 \subsubsection{Transferencia de la configuración}
 
@@ -833,9 +833,9 @@ Si se quiere dar recomendaciones para una tarea específica $t_{new}$, necesitam
 	\item Hablar de Active Testing
 	\item Poner ejemplos
 	\item \textit{Pairwise meta rules for better meta learning based algorithm ranking}
-	\item \textit{Toward Automatic Generation of Meta-features}
+	\item \textit{Toward Automatic Generation of Meta-features} (\cite{pinto2016towards})
 	\item Automl \begin{itemize}
-		\item ActivMetaL
+		\item ActivMetaL \cite{activmetal}
 	\end{itemize}
 \end{itemize}
 
@@ -853,10 +853,10 @@ Uno de los enfoques para la solución de este problema es mediante el uso de \te
 	\item[$\checkmark$] Explicar en qué consiste
 	\item Me falta explicar qué es un modelo sustituto
 	\item Poner ejemplos
-	\item \textit{Collaborative hyperparameter tuning}
-	\item \textit{Efficient Transfer Learning Method for Automatic Hyperparameter Tuning}
-	\item \textit{Hyperparameter Optimization with Factorized Multilayer Perceptrons}
-	\item \textit{Scalable Gaussian process-based transfer surrogates for hyperparameter optimization.}
+	\item \textit{Collaborative hyperparameter tuning} \cite{bardenet2013hyper}
+	\item \textit{Efficient Transfer Learning Method for Automatic Hyperparameter Tuning} \cite{yogatama2014efficient}
+	\item \textit{Hyperparameter Optimization with Factorized Multilayer Perceptrons} \cite{schilling2015hyp}
+	\item \textit{Scalable Gaussian process-based transfer surrogates for hyperparameter optimization.} \cite{witsuba2018scalable}
 	\item AutoML \begin{itemize}
 		\item OBOE
 		\item PMF
